# Agent_Pidgeon

./: .env.example  .gitignore  Handoff_2026-03-25.md  README.md  Real_vs_Vaporware_Roadmap.md  pyproject.toml
.github/workflows/: unittest.yml
.windsurf/workflows/: live-stdio-integration-test.md
docs/plans/: 2026-03-25-agent-pidgin-hybrid-protocol-design.md  2026-03-25-agent-pidgin-hybrid-protocol-implementation.md  2026-03-25-hf-layout-wiring-design.md  2026-03-25-hf-layout-wiring-implementation.md  2026-03-25-stdio-integration-design.md  2026-03-25-stdio-integration-implementation.md
scripts/: poc_real_mount.py  poc_send.py  poc_stdio_send.py
servers/: pidgin_receiver.py
src/agent_pidgin/: __init__.py  catalog.py  cli.py  config.py  demo.py  hf_mount.py  mcp_app.py  protocol.py  receiver_cli.py  resolver.py  sender.py  service.py  stdio_cli.py
tests/: test_catalog.py  test_config.py  test_demo.py  test_hf_mount.py  test_mcp_app.py  test_protocol.py  test_sender.py  test_service.py  test_stdio_integration.py
