[project]
name = "agent-pidgin"
version = "0.1.0"
description = "HF_MOUNT-backed A2A pidgin proof of concept"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.0.0",
]

[project.scripts]
agent-pidgin-demo = "agent_pidgin.cli:main"
agent-pidgin-stdio-demo = "agent_pidgin.stdio_cli:main"
agent-pidgin-receiver = "agent_pidgin.receiver_cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
